Add first content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <header>
+
             <!-- Logo and Name -->
             <img src="resources/images/capstone_colmar_assets/images/ic-logo.svg" alt="Colmar Academy Logo" />
             <p class="colmar">Colmar</p><p class="academy">Academy</p>
@@ -23,6 +24,19 @@
         </header>
 
         <main>
+
+            <!-- First Content -->
+            <div class="start">
+                <img src="resources/images/capstone_colmar_assets/images/banner.jpg" alt="Woman reading a book" />
+                <h2>Learn something new everyday</h2>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                <button type="button">Start here</button>
+            </div>
+
+            <!-- Second Content -->
+            <div class="practice">
+                
+            </div>
 
         </main>
 
