--- a/index.html
+++ b/index.html
@@ -34,8 +34,34 @@
             </div>
 
             <!-- Second Content -->
-            <div class="practice">
-                
+            <div class="main">
+                <div class="practice">
+                    <img src="resources/images/capstone_colmar_assets/images/information-main.jpg" alt="Man reading a book." />
+                    <h2>It doesn't hurt to keep practicing</h2>
+                    <h3>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non acuumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h3>
+                    <h4>Emanuel, Sr Strategist at Hiring.com</h4>
+                </div>
+                <div>
+                    <div class="orientation">
+                        <img src="resources/images/capstone_colmar_assets/images/information-orientation.jpg" alt="Students walking" />
+                        <h5>Orientation date</h5>
+                        <h6>Tue 10/11 & Wed 10/12: 8am-3pm</h6>
+                        <p class="readmore">Read more</p>
+                    </div>
+                    <div class="campus">
+                        <img src="resources/images/capstone_colmar_assets/images/information-campus.jpg" alt="cafe setting for studies" />
+                        <h5>Our campus</h5>
+                        <h6>Find which campus is close by you</h6>
+                        <p class="readmore">Read more</p>
+                    </div>
+                    <div class="guest">
+                        <img src="resources/images/capstone_colmar_assets/images/information-guest-lecture.jpg" alt="Oliver Sack" />
+                        <h5>Our guest lecture</h5>
+                        <h6>Join a keynote with Oliver Sack about music in medical treatment</h6>
+                        <p class="readmore">Read more</p>
+                    </div>
+                </div>
+
             </div>
 
         </main>
