Add third section of content

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 
         <main>
 
-            <!-- First Content -->
-            <div class="start">
+            <!-- First Section -->
+            <div class="first">
                 <img src="resources/images/capstone_colmar_assets/images/banner.jpg" alt="Woman reading a book" />
                 <h2>Learn something new everyday</h2>
                 <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
                 <button type="button">Start here</button>
             </div>
 
-            <!-- Second Content -->
-            <div class="main">
+            <!-- Second Section -->
+            <div class="second">
                 <div class="practice">
                     <img src="resources/images/capstone_colmar_assets/images/information-main.jpg" alt="Man reading a book." />
                     <h2>It doesn't hurt to keep practicing</h2>
@@ -62,6 +62,52 @@
                     </div>
                 </div>
 
+            </div>
+
+            <!-- Third Section -->
+            <div class="third">
+                <h1>Start learning</h1>
+                <div class="software">
+                    <img src="resources/images/capstone_colmar_assets/images/course-software.jpg" alt="Apple Mac computer" />
+                    <h4>Software engineering</h4>
+                    <h5>COURSES</h5>
+                    <h5>Web Development, Mobile Development, iOT, APIs</h5>
+                </div>
+                <div class="computer">
+                    <img src="resources/images/capstone_colmar_assets/images/course-computer-art.jpg" alt="Apple cellphone" />
+                    <h4>Computer art</h4>
+                    <h5>COURSES</h5>
+                    <h5>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h5>
+                </div>
+                <div class="design">
+                    <img src="./resources/images/capstone_colmar_assets/images/course-design.jpg" alt="student with a camera" />
+                    <h4>Design</h4>
+                    <h5>COURSES</h5>
+                    <h5>User Experience Design, User Research, Visual Design</h5>
+                </div>
+                <div class="data">
+                    <img src="./resources/images/capstone_colmar_assets/images/course-data.jpg" alt="laptop on a desk" />
+                    <h4>Data</h4>
+                    <h5>COURSES</h5>
+                    <h5>Data Science, Big Data, SQL, Data Visualization</h5>
+                </div>
+                <div class="business">
+                    <img src="./resources/images/capstone_colmar_assets/images/course-business.jpg" alt="a chess board" />
+                    <h4>Business</h4>
+                    <h5>COURSES</h5>
+                    <h5>Product Development, Business Development, Startup</h5>
+                </div>
+                <div class="marketing">
+                    <img src="./resources/images/capstone_colmar_assets/images/course-marketing.jpg" alt="a smartwatch" />
+                    <h4>Marketing</h4>
+                    <h5>COURSES</h5>
+                    <h5>Analytics, Content Marketing, Mobile Marketing</h5>
+                </div>
+            </div>
+
+            <!-- Fourth Section -->
+            <div class="fourth">
+                
             </div>
 
         </main>
