Add final section of content

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                         <img src="resources/images/capstone_colmar_assets/images/information-orientation.jpg" alt="Students walking" />
                         <h5>Orientation date</h5>
                         <h6>Tue 10/11 & Wed 10/12: 8am-3pm</h6>
-                        <p class="readmore">Read more</p>
+                        <link href="#">Read more</link>
                     </div>
                     <div class="campus">
                         <img src="resources/images/capstone_colmar_assets/images/information-campus.jpg" alt="cafe setting for studies" />
                         <h5>Our campus</h5>
                         <h6>Find which campus is close by you</h6>
-                        <p class="readmore">Read more</p>
+                        <link href="#">Read more</link>
                     </div>
                     <div class="guest">
                         <img src="resources/images/capstone_colmar_assets/images/information-guest-lecture.jpg" alt="Oliver Sack" />
                         <h5>Our guest lecture</h5>
                         <h6>Join a keynote with Oliver Sack about music in medical treatment</h6>
-                        <p class="readmore">Read more</p>
+                        <link href="#">Read more</link>
                     </div>
                 </div>
 
@@ -107,10 +107,31 @@
 
             <!-- Fourth Section -->
             <div class="fourth">
-                
+                <h1>Thesis exhibit</h1>
+                <div class="urban">
+                    <video src="./resources/images/capstone_colmar_assets/videos/thesis.mp4" type="mp4">Video not supported on your browser.</video>
+                    <h2>Reimagine urban</h2>
+                    <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non acuumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+                </div>
+                <div class="fisma">
+                    <img src="./resources/images/capstone_colmar_assets/images/thesis-fisma.jpg" alt="desk with cell phone and papers">
+                    <h3>Fisma: Design and Prototype</h3>
+                    <p>Designer showcase of new prototype product</p>
+                </div>
+                <div class="nowandthen">
+                    <img src="./resources/images/capstone_colmar_assets/images/thesis-now-and-then.jpg" alt="skyscraper">
+                    <h3>Now and then</h3>
+                    <p>Research study about New York</p>
+                </div>
             </div>
 
         </main>
+
+        <footer>
+            <p class="rights">&copy; Colmar Academy. All rights reserved</p>
+            <p class="terms">Terms</p>
+            <p class="Privacy">Privacy</p>
+        </footer>
 
     </body>
 </html>
