--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
             <p class="colmar">Colmar</p><p class="academy">Academy</p>
 
             <!-- Navigation Bar -->
-            <nav>
-                <ul>
-                    <li>On Campus</li>
-                    <li>Online</li>
-                    <li>For Companies</li>
-                    <li>Sign In</li>
-                </ul>
+            <nav class="topnav">
+                <a href="#">On Campus</a>
+                <a href="#">Online</a>
+                <a href="#">For Companies</a>
+                <a href="#">Sign In</a>
             </nav>
 
         </header>
